examples/test/testpolicy10847.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10847
  namespace: namespace411
spec:
  podSelector:
    matchLabels:
      key20: value41
      key19: value1
      key29: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value41
          key0: value46
      podSelector:
        matchLabels:
          key35: value48
          key28: value43
          key29: value3
